--- a/Class02/cookie_recipe/CSS/style.css
+++ b/Class02/cookie_recipe/CSS/style.css
@@ -1,7 +1,7 @@
 body{
 	background-color: #ffdf1b;
 	border-style: solid;
-	border-color: black;
+	border-color: red;
 	border-width: 10px;
 	padding: 5px;
 }
